Horizontal scroll bug fixed

--- a/react-src/src/App.css
+++ b/react-src/src/App.css
@@ -442,10 +442,6 @@ code {
 }
 
 @media screen and (max-width: 750px) {
-  #usercontrol {
-    width: 12rem;
-  }
-
   #usercontrol > .userbutton {
     position: relative;
     top: 10px;
